test_src/compiler_errors/types/arithmetic/ModFloatError1.b
class ModFloatError1 {
    void test() {
        println(1.0f % 2);
    }
}
